--- a/main.css
+++ b/main.css
@@ -58,7 +58,6 @@ a {
   font-weight: bold;
   justify-content: center;
   display: flex;
-  flex-basis: initial;
 }
 
 .main {
@@ -137,7 +136,6 @@ margin: 50px; */
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  display: block;
 }
 
 .info-page__card {
@@ -158,7 +156,10 @@ margin: 50px; */
   align-items: center;
   flex-direction: column;
   margin: 1rem;
-  width: 80px;
+  /*width: 80px;*/
+  width: 163px;
+  height: 194px;
+  font-size: 10px;
 }
 
 .info-page__photo img {
@@ -174,7 +175,9 @@ margin: 50px; */
   align-items: center;
   flex-direction: column;
   margin: 1rem;
-  width: 100px;
+  /*width: 100px; */
+  width: 163px;
+  height: 194px;
 }
 
 .footer > * {
